# optimize-me

./: .dockerignore  README.md  env.example  pyproject.toml  requirements.txt  test_all_functions.py
.claude/: settings.local.json
.github/workflows/: codeflash-optimize.yml  run-tests.yml
examples/: run_all_traces.py  run_custom_traces.py  run_with_telemetry.py
java/: pom.xml
js/: package-lock.json  package.json
js/src/: asyncUtils.js  dataTransform.ts
js/tests/: asyncUtils.test.js  dataTransform.test.ts
src/: information.py  main.py
src/algorithms/: __init__.py  caching.py  dynamic_programming.py  graph.py  helpers.py  search.py  string.py  string_example.py  text_analysis.py
src/async/: examples.py
src/async_examples/: __init__.py  concurrency.py  database.py  file_io.py  main.py  shocker.py  web_scraping.py
src/asynchrony/: various.py
src/data_processing/: __init__.py  dataframe.py  series.py  transformations.py
src/dsa/: caching_memoization.py  nodes.py  various.py
src/math/: __init__.py  combinatorics.py  computation.py  number_theory.py
src/misc/: properties.py
src/numerical/: __init__.py  calculus.py  linear_algebra.py  monte_carlo.py  optimization.py
src/numpy_pandas/: dataframe_operations.py  matrix_operations.py  np_opts.py  numerical_methods.py  signal_processing.py  statistical_functions.py
src/signal/: __init__.py  filters.py  image.py  transforms.py
src/statistics/: __init__.py  clustering.py  decomposition.py  descriptive.py  similarity.py
src/telemetry/: INSTRUMENTATION_COMPARISON.md  README.md  __init__.py  (+6 more)
tests/: test_async_examples_main.py  test_common_tags.py  test_concurrency.py  test_dsa_nodes.py  test_fetch_all_users.py  test_shocker.py  test_telemetry.py  test_text_analysis.py
(+4 files in other folders)
