[project]
name = "optimize-me"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
]

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "src"
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
formatter-cmds = ["black $file"]

[tool.uv.sources]
codeflash-core = { path = "../cf_org/codeflash-next-gen", editable = true }

[dependency-groups]
dev = [
    "codeflash-core",
]
