[project]
name = "optimize-me"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "black",
    "networkx",
    "numpy",
    "pandas",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "src"
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
formatter-cmds = ["black $file"]
